# evy

./: LICENSE  Makefile  README.md  evy.cabal  schema.cql  schema.sql  stack.yaml
src/: EntryList.hs  InputField.hs  IntroMenu.hs  List.hs  Login.hs  Main.hs  PortfolioView.hs  Register.hs  Stocks.hs  Table.hs  Types.hs  Util.hs
