name:                evy
version:             0.1.0.3
synopsis:            the app
description:         ...
homepage:            none
license:             BSD2
license-file:        LICENSE
author:              Kristian Sällberg
maintainer:          Kristian Sällberg
copyright:           2018 Kristian Sällberg
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable evy
  main-is:           Main.hs
  hs-source-dirs:    src
  ghc-options:       -threaded -rtsopts
  build-depends: base
               , text
               , time
               , MissingH
               , tinylog
               , uuid
               , brick
               , vty
               , microlens
               , microlens-th
               , vector
               , ansi-terminal
               , postgresql-simple
               , lens
               , array
               , http-conduit
               , bytestring
               , aeson
  other-modules: Login
               , IntroMenu
               , List
               , Register
               , InputField
               , Table
               , PortfolioView
               , Types
               , Stocks
               , Util
  default-language:  Haskell2010

source-repository head
  type:     git
  location: https://github.com/ksallberg/evy.git
